<resources>
    <string name="app_name">Omega-Splicer</string>
    <string name="shared_preference_file_key" translatable="false">com.epitech.billy.omega_splicer.PREFERENCE_FILE_KEY</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="pair">Pair</string>
    <string name="fly">Fly</string>
    <string name="setting">Setting</string>

    <!-- ************* -->
    <!-- MISCELLANEOUS -->
    <!-- ************* -->

    <string name="bluetooth_not_enable">The bluetooth is not enable</string>
    <string name="bluetooth_mandatory">The bluetooth is mandatory</string>

    <!-- ******************** -->
    <!-- END OF MISCELLANEOUS -->
    <!-- ******************** -->

    <!-- ************ -->
    <!-- SETTING PAGE -->
    <!-- ************ -->

    <!-- orientation values -->
    <string name="setting_orientation">Orientation</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>

    <!-- control values -->
    <string name="setting_controls">Controls</string>
    <string name="control_buttons">Buttons</string>
    <string name="control_gyroscope">Gyroscope</string>

    <!-- speed's unit values -->
    <string name="setting_speed_unit">Speed\'s unit</string>
    <string name="speed_unit_mph" translatable="false">mph</string>
    <string name="speed_unit_mps" translatable="false">m/s</string>
    <string name="speed_unit_kmph" translatable="false">km/h</string>

    <!-- shared preference values -->
    <string name="orientation_shared_preference" translatable="false">orientationSettingPreference</string>
    <string name="default_orientation_value_shared_preference" translatable="false">portrait</string>
    <string name="portrait_orientation_shared_preference" translatable="false">portrait</string>
    <string name="landscape_orientation_shared_preference" translatable="false">landscape</string>
    <string name="control_shared_preference" translatable="false">controlSettingPreference</string>
    <string name="default_control_value_shared_preference" translatable="false">buttons</string>
    <string name="button_control_shared_preference" translatable="false">buttons</string>
    <string name="gyroscope_control_shared_preference">gyroscope</string>
    <string name="speed_unit_shared_preference" translatable="false">speedUnitSettingPreference</string>
    <string name="default_speed_unit_value_shared_preference">milesPerHour</string>
    <string name="km_speed_unit_shared_preference">kilometerPerHour</string>
    <string name="ms_speed_unit_shared_preference">meterPerSecond</string>
    <string name="mph_speed_unit_shared_preference">milesPerHour</string>

    <!-- ******************* -->
    <!-- End OF SETTING PAGE -->
    <!-- ******************* -->

    <!-- ******** -->
    <!-- FLY PAGE -->
    <!-- ******** -->

    <string name="fly_activity_battery_level_description">Level of the plane\'s battery</string>
    <string name="fly_activity_setting_description">Open the settings</string>
    <string name="fly_activity_bluetooth_signal_description">Bluetooth strength signal</string>
    <string name="fly_activity_share_description">Share the fly\'s data</string>

    <!-- *************** -->
    <!-- END OF FLY PAGE -->
    <!-- *************** -->


    <!-- ********* -->
    <!-- PAIR PAGE -->
    <!-- ********* -->

    <string name="pair_activity_connecting_status">Connecting…</string>
    <string name="pair_activity_connected_status">Connected</string>
    <string name="pair_activity_invalid_address_error">Invalid bluetooth address, please try another device</string>
    <string name="pair_activity_missing_address_error">Missing bluetooth address, please try another device</string>
    <string name="pair_activity_unknown_error">An unexpected error occurred, contact someone</string>
    <string name="pair_activity_cant_connect_error">Couldn\'t connect to the device</string>

    <!-- **************** -->
    <!-- END OF PAIR PAGE -->
    <!-- **************** -->



</resources>
