<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_keyboard_backspace_black_36dp"
            android:scaleType="center"
            android:background="@drawable/cloud"
            android:transitionName="setting_transition_cloud"
            android:id="@+id/setting_activity_back_cloud"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:id="@+id/setting_activity_title"
            android:transitionName="setting_transition_text"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_orientation"
                    android:textSize="25sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/setting_activity_orientation_radio_group"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_orientation_portrait"
                    android:text="@string/orientation_portrait"
                    android:textSize="25sp"
                    android:checked="false"
                    android:tag="@string/button_control_shared_preference"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_orientation_landscape"
                    android:text="@string/orientation_landscape"
                    android:textSize="25sp"
                    android:checked="false"
                    android:tag="@string/gyroscope_control_shared_preference"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_controls"
                    android:textSize="25sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/setting_activity_controls_radio_group"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_control_with_buttons"
                    android:text="@string/control_buttons"
                    android:textSize="25sp"
                    android:checked="true"
                    android:tag="@string/button_control_shared_preference"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_control_with_gyroscope"
                    android:text="@string/control_gyroscope"
                    android:textSize="25sp"
                    android:tag="@string/gyroscope_control_shared_preference"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_speed_unit"
                    android:textSize="25sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_activity_speed_unit_radio_group"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_speed_unit_km_h"
                    android:text="@string/speed_unit_kmph"
                    android:textSize="25sp"
                    android:checked="true"
                    android:tag="@string/km_speed_unit_shared_preference"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_speed_unit_m_s"
                    android:text="@string/speed_unit_mps"
                    android:textSize="25sp"
                    android:tag="@string/ms_speed_unit_shared_preference"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/setting_activity_speed_unit_mph"
                    android:text="@string/speed_unit_mph"
                    android:textSize="25sp"
                    android:tag="@string/mph_speed_unit_shared_preference"/>

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

</LinearLayout>