<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting_popup_title"
        android:padding="10dp"
        android:text="@string/setting"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="@color/blue_omega_splicer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/setting_popup_control"
            android:gravity="center_vertical"
            android:text="@string/setting_controls"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/setting_popup_control_spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/setting_popup_speed_unit"
            android:gravity="center_vertical"
            android:text="@string/setting_speed_unit"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/setting_popup_speed_unit_spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_popup_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            android:textColor="@color/blue_omega_splicer"
            android:background="@android:color/transparent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_popup_ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"
            android:textColor="@color/blue_omega_splicer"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>